# laws

./: .gitignore  Cargo.toml
crates/fetch-models/: Cargo.toml
crates/fetch-models/src/: lib.rs
crates/schema/: Cargo.toml
crates/schema/src/: endpoint_rules.rs  lib.rs  shape_id.rs  shapes.rs  traits.rs
crates/write-ts/: Cargo.toml
crates/write-ts/src/: lib.rs
src/: main.rs
ts-client/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json  vitest.config.ts
ts-client/src/: service.ts  xml.ts
ts-client/src/auth/: sigv4.test.ts  sigv4.ts
ts-client/src/protocols/: awsJson1_0.ts  awsJson1_1.ts  awsQuery.ts  ec2Query.ts  restJson1.ts  restXml.ts
ts-client/tests/: dynamodb.test.ts  getProfileCredentials.ts
