[package]
name = "aws-client-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
miette = { workspace = true, features = ["fancy"] }
rayon = "1.8.0"
serde_json = "1.0.108"

fetch-models = { path = "crates/fetch-models" }
schema = { workspace = true }
write-ts = { path = "crates/write-ts" }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
miette = "5.10.0"
schema = { path = "crates/schema" }
